# serializer version: 1
# name: test_add_quantized_columns_for_h3
  dict({
    <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: dtype('float64'),
    <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: dtype('float64'),
    'QUANTIZED_H3_L0': dtype('O'),
    'QUANTIZED_H3_L1': dtype('O'),
    'QUANTIZED_H3_L10': dtype('O'),
    'QUANTIZED_H3_L11': dtype('O'),
    'QUANTIZED_H3_L12': dtype('O'),
    'QUANTIZED_H3_L13': dtype('O'),
    'QUANTIZED_H3_L14': dtype('O'),
    'QUANTIZED_H3_L15': dtype('O'),
    'QUANTIZED_H3_L2': dtype('O'),
    'QUANTIZED_H3_L3': dtype('O'),
    'QUANTIZED_H3_L4': dtype('O'),
    'QUANTIZED_H3_L5': dtype('O'),
    'QUANTIZED_H3_L6': dtype('O'),
    'QUANTIZED_H3_L7': dtype('O'),
    'QUANTIZED_H3_L8': dtype('O'),
    'QUANTIZED_H3_L9': dtype('O'),
    <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: datetime64[ns, UTC],
    <SchemaColumns.UUID_STRING: 'UUID_STRING'>: dtype('O'),
  })
# ---
# name: test_add_quantized_columns_for_h3.1
  list([
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b3bf',
      'QUANTIZED_H3_L14': '8e283082800b397',
      'QUANTIZED_H3_L15': '8f283082800b390',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa6ffff',
      'QUANTIZED_H3_L11': '8b283082aa6efff',
      'QUANTIZED_H3_L12': '8c283082aa6e1ff',
      'QUANTIZED_H3_L13': '8d283082aa6e13f',
      'QUANTIZED_H3_L14': '8e283082aa6e11f',
      'QUANTIZED_H3_L15': '8f283082aa6e118',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a28ffff',
      'QUANTIZED_H3_L11': '8b283082a288fff',
      'QUANTIZED_H3_L12': '8c283082a288dff',
      'QUANTIZED_H3_L13': '8d283082a288d7f',
      'QUANTIZED_H3_L14': '8e283082a288d67',
      'QUANTIZED_H3_L15': '8f283082a288d63',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a2bffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283080cce7fff',
      'QUANTIZED_H3_L11': '8b283080cce5fff',
      'QUANTIZED_H3_L12': '8c283080cce57ff',
      'QUANTIZED_H3_L13': '8d283080cce57bf',
      'QUANTIZED_H3_L14': '8e283080cce5637',
      'QUANTIZED_H3_L15': '8f283080cce5636',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283080cffffff',
      'QUANTIZED_H3_L8': '88283080cdfffff',
      'QUANTIZED_H3_L9': '89283080ccfffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283080e86ffff',
      'QUANTIZED_H3_L11': '8b283080e86afff',
      'QUANTIZED_H3_L12': '8c283080e86a5ff',
      'QUANTIZED_H3_L13': '8d283080e86a57f',
      'QUANTIZED_H3_L14': '8e283080e86a547',
      'QUANTIZED_H3_L15': '8f283080e86a542',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283080effffff',
      'QUANTIZED_H3_L8': '88283080e9fffff',
      'QUANTIZED_H3_L9': '89283080e87ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283080e08ffff',
      'QUANTIZED_H3_L11': '8b283080e08bfff',
      'QUANTIZED_H3_L12': '8c283080e08bdff',
      'QUANTIZED_H3_L13': '8d283080e08bdbf',
      'QUANTIZED_H3_L14': '8e283080e08bca7',
      'QUANTIZED_H3_L15': '8f283080e08bd8b',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283080effffff',
      'QUANTIZED_H3_L8': '88283080e1fffff',
      'QUANTIZED_H3_L9': '89283080e0bffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283081dae7fff',
      'QUANTIZED_H3_L11': '8b283081dae3fff',
      'QUANTIZED_H3_L12': '8c283081dae3bff',
      'QUANTIZED_H3_L13': '8d283081dae3b7f',
      'QUANTIZED_H3_L14': '8e283081dae3b5f',
      'QUANTIZED_H3_L15': '8f283081dae3b5a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283081dffffff',
      'QUANTIZED_H3_L8': '88283081dbfffff',
      'QUANTIZED_H3_L9': '89283081dafffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283081d64ffff',
      'QUANTIZED_H3_L11': '8b283081d64cfff',
      'QUANTIZED_H3_L12': '8c283081d64c5ff',
      'QUANTIZED_H3_L13': '8d283081d64c4bf',
      'QUANTIZED_H3_L14': '8e283081d64c487',
      'QUANTIZED_H3_L15': '8f283081d64c485',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283081fffffff',
      'QUANTIZED_H3_L7': '87283081dffffff',
      'QUANTIZED_H3_L8': '88283081d7fffff',
      'QUANTIZED_H3_L9': '89283081d67ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830819527fff',
      'QUANTIZED_H3_L11': '8b2830819524fff',
      'QUANTIZED_H3_L12': '8c28308195243ff',
      'QUANTIZED_H3_L13': '8d283081952427f',
      'QUANTIZED_H3_L14': '8e2830819524257',
      'QUANTIZED_H3_L15': '8f2830819524273',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283081fffffff',
      'QUANTIZED_H3_L7': '872830819ffffff',
      'QUANTIZED_H3_L8': '882830819dfffff',
      'QUANTIZED_H3_L9': '89283081953ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283081b8c7fff',
      'QUANTIZED_H3_L11': '8b283081b8c5fff',
      'QUANTIZED_H3_L12': '8c283081b8c5bff',
      'QUANTIZED_H3_L13': '8d283081b8c5abf',
      'QUANTIZED_H3_L14': '8e283081b8c5a8f',
      'QUANTIZED_H3_L15': '8f283081b8c5a8a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283081fffffff',
      'QUANTIZED_H3_L7': '87283081bffffff',
      'QUANTIZED_H3_L8': '88283081b9fffff',
      'QUANTIZED_H3_L9': '89283081b8fffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_add_quantized_columns_for_timestamp
  dict({
    <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: dtype('float64'),
    <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: dtype('float64'),
    'QUANTIZED_TIMESTAMP_DAY': datetime64[ns, UTC],
    'QUANTIZED_TIMESTAMP_HOUR': datetime64[ns, UTC],
    'QUANTIZED_TIMESTAMP_MINUTE': datetime64[ns, UTC],
    'QUANTIZED_TIMESTAMP_MONTH': dtype('<M8[ns]'),
    'QUANTIZED_TIMESTAMP_SECOND': datetime64[ns, UTC],
    'QUANTIZED_TIMESTAMP_YEAR': dtype('<M8[ns]'),
    <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: datetime64[ns, UTC],
    <SchemaColumns.UUID_STRING: 'UUID_STRING'>: dtype('O'),
  })
# ---
# name: test_add_quantized_columns_for_timestamp.1
  list([
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_bucket_by_target_column_h3_column_preservation_snapshot
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283080cce7fff',
      'QUANTIZED_H3_L11': '8b283080cce5fff',
      'QUANTIZED_H3_L12': '8c283080cce57ff',
      'QUANTIZED_H3_L13': '8d283080cce57bf',
      'QUANTIZED_H3_L14': '8e283080cce5637',
      'QUANTIZED_H3_L15': '8f283080cce5636',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283080cffffff',
      'QUANTIZED_H3_L8': '88283080cdfffff',
      'QUANTIZED_H3_L9': '89283080ccfffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283080e86ffff',
      'QUANTIZED_H3_L11': '8b283080e86afff',
      'QUANTIZED_H3_L12': '8c283080e86a5ff',
      'QUANTIZED_H3_L13': '8d283080e86a57f',
      'QUANTIZED_H3_L14': '8e283080e86a547',
      'QUANTIZED_H3_L15': '8f283080e86a542',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283080effffff',
      'QUANTIZED_H3_L8': '88283080e9fffff',
      'QUANTIZED_H3_L9': '89283080e87ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830819527fff',
      'QUANTIZED_H3_L11': '8b2830819524fff',
      'QUANTIZED_H3_L12': '8c28308195243ff',
      'QUANTIZED_H3_L13': '8d283081952427f',
      'QUANTIZED_H3_L14': '8e2830819524257',
      'QUANTIZED_H3_L15': '8f2830819524273',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283081fffffff',
      'QUANTIZED_H3_L7': '872830819ffffff',
      'QUANTIZED_H3_L8': '882830819dfffff',
      'QUANTIZED_H3_L9': '89283081953ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283081b8c7fff',
      'QUANTIZED_H3_L11': '8b283081b8c5fff',
      'QUANTIZED_H3_L12': '8c283081b8c5bff',
      'QUANTIZED_H3_L13': '8d283081b8c5abf',
      'QUANTIZED_H3_L14': '8e283081b8c5a8f',
      'QUANTIZED_H3_L15': '8f283081b8c5a8a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283081fffffff',
      'QUANTIZED_H3_L7': '87283081bffffff',
      'QUANTIZED_H3_L8': '88283081b9fffff',
      'QUANTIZED_H3_L9': '89283081b8fffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283081dae7fff',
      'QUANTIZED_H3_L11': '8b283081dae3fff',
      'QUANTIZED_H3_L12': '8c283081dae3bff',
      'QUANTIZED_H3_L13': '8d283081dae3b7f',
      'QUANTIZED_H3_L14': '8e283081dae3b5f',
      'QUANTIZED_H3_L15': '8f283081dae3b5a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283080fffffff',
      'QUANTIZED_H3_L7': '87283081dffffff',
      'QUANTIZED_H3_L8': '88283081dbfffff',
      'QUANTIZED_H3_L9': '89283081dafffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b3bf',
      'QUANTIZED_H3_L14': '8e283082800b397',
      'QUANTIZED_H3_L15': '8f283082800b390',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa6ffff',
      'QUANTIZED_H3_L11': '8b283082aa6efff',
      'QUANTIZED_H3_L12': '8c283082aa6e1ff',
      'QUANTIZED_H3_L13': '8d283082aa6e13f',
      'QUANTIZED_H3_L14': '8e283082aa6e11f',
      'QUANTIZED_H3_L15': '8f283082aa6e118',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
  ])
# ---
# name: test_bucket_by_target_column_simple_data_snapshot
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
      'category': 'A',
      'value': 10,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.78,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.43,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
      'category': 'B',
      'value': 20,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.79,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.44,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
      'category': 'C',
      'value': 40,
    }),
  ])
# ---
# name: test_bucket_by_target_column_temporal_column_preservation_snapshot
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_filter_df_to_selected_buckets_snapshot
  list([
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
      'category': 'A',
      'value': 10,
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
      'category': 'A',
      'value': 30,
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.79,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.44,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
      'category': 'C',
      'value': 40,
    }),
  ])
# ---
# name: test_get_optimal_temporal_level
  dict({
    1: <TemporalLevel.DAY: 'DAY'>,
    2: <TemporalLevel.DAY: 'DAY'>,
    3: <TemporalLevel.HOUR: 'HOUR'>,
    4: <TemporalLevel.HOUR: 'HOUR'>,
    5: <TemporalLevel.HOUR: 'HOUR'>,
    6: <TemporalLevel.HOUR: 'HOUR'>,
    7: <TemporalLevel.HOUR: 'HOUR'>,
    8: <TemporalLevel.HOUR: 'HOUR'>,
    9: <TemporalLevel.HOUR: 'HOUR'>,
    10: <TemporalLevel.HOUR: 'HOUR'>,
    100: <TemporalLevel.HOUR: 'HOUR'>,
    1000: <TemporalLevel.MINUTE: 'MINUTE'>,
    5000: <TemporalLevel.MINUTE: 'MINUTE'>,
    10000: None,
  })
# ---
